// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadersAttributeFormatter getDrawerConfiguration - td headers=headers role=null id=id 1`] = `
{
  "borderColor": "#6600CC",
  "failureBoxConfig": null,
  "outlineStyle": "solid",
  "showVisualization": true,
  "textAlign": "right",
  "textBoxConfig": {
    "background": "#6600CC",
    "fontColor": "#FFFFFF",
    "text": "td",
  },
}
`;

exports[`TableHeadersAttributeFormatter getDrawerConfiguration - td headers=headers role=null id=null 1`] = `
{
  "borderColor": "#6600CC",
  "failureBoxConfig": null,
  "outlineStyle": "solid",
  "showVisualization": true,
  "textAlign": "right",
  "textBoxConfig": {
    "background": "#6600CC",
    "fontColor": "#FFFFFF",
    "text": "td",
  },
}
`;

exports[`TableHeadersAttributeFormatter getDrawerConfiguration - th headers=headers role=null id=id 1`] = `
{
  "borderColor": "#0066CC",
  "failureBoxConfig": null,
  "outlineStyle": "solid",
  "showVisualization": true,
  "textAlign": "right",
  "textBoxConfig": {
    "background": "#0066CC",
    "fontColor": "#FFFFFF",
    "text": "th",
  },
}
`;

exports[`TableHeadersAttributeFormatter getDrawerConfiguration - th headers=null role=null id=id 1`] = `
{
  "borderColor": "#0066CC",
  "failureBoxConfig": null,
  "outlineStyle": "solid",
  "showVisualization": true,
  "textAlign": "right",
  "textBoxConfig": {
    "background": "#0066CC",
    "fontColor": "#FFFFFF",
    "text": "th",
  },
}
`;
